changes lots of stuff