@@ -8,9 +8,11 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import pet.lovers.entities.*;
-import pet.lovers.service.*;
+import pet.lovers.service.EmploymentRequestService;
+import pet.lovers.service.PetService;
+import pet.lovers.service.ShelterService;
+import pet.lovers.service.UserService;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Controller
 @RequestMapping("/vet")
@@ -19,16 +21,14 @@ public class VetController {
     private final UserService userService;
     private final PetService petService;
     private final ShelterService shelterService;
-    private final ShelterRequestService shelterRequestService;
-    private final VetService vetService;
+    private final EmploymentRequestService employmentRequestService;
 
-    public VetController(UserService userService, PetService petService, ShelterService shelterService, ShelterRequestService shelterRequestService, VetService vetService) {
+    public VetController(UserService userService, PetService petService, ShelterService shelterService, EmploymentRequestService employmentRequestService) {
         this.userService = userService;
         this.petService = petService;
         this.shelterService = shelterService;
-        this.shelterRequestService = shelterRequestService;
-        this.vetService = vetService;
-    }
+        this.employmentRequestService = employmentRequestService;
+     }
 
     @GetMapping("/dashboard")
     public String dashboard() {return "index";}
@@ -38,10 +38,10 @@ public class VetController {
         Vet vet = (Vet) userService.getCurrentUser();
 
         List<Pet> pets = shelterService.findByVet(vet)
-                .stream()
-                .flatMap(shelter -> shelter.getPets().stream())
-                .filter(pet -> pet.getUserStatus() == UserStatus.APPROVED)
-                .collect(Collectors.toList());
+                                       .stream()
+                                       .flatMap(shelter -> shelter.getPets().stream())
+                                       .filter(pet -> pet.getUserStatus() == UserStatus.APPROVED)
+                                       .toList();
 
         model.addAttribute("pets", pets);
         model.addAttribute("healthStatuses", HealthStatus.values());
@@ -50,38 +50,37 @@ public class VetController {
 
 
     @PostMapping("/health-status")
-    public String updateHealthStatus(@RequestParam("petId") int petId,
-                                     @RequestParam("healthStatus") String healthStatus) {
+    public String updateHealthStatus(@RequestParam("petId") int petId, @RequestParam("healthStatus") String healthStatus) {
         petService.updateHealthStatus(petId, healthStatus);
         return "redirect:/vet/health-status";
     }
 
-    @GetMapping("/shelter-request")
-    public String showShelterRequest(Model model) {
+    @GetMapping("/employment-request")
+    public String showEmploymentRequest(Model model) {
         Vet currentVet = (Vet) userService.getCurrentUser();
 
         List<Shelter> sheltersWithoutVet = shelterService.getShelters()
-                .stream()
-                .filter(shelter -> shelter.getVet() == null)
-                .collect(Collectors.toList());
+                                                         .stream()
+                                                         .filter(shelter -> shelter.getVet() == null)
+                                                         .toList();
 
         model.addAttribute("shelters", sheltersWithoutVet);
         model.addAttribute("currentVet", currentVet);
-        return "vet/shelter-request";
+        return "vet/employment-request";
     }
 
 
-    @PostMapping("/shelter-request")
-    public String submitShelterRequest(@RequestParam("shelterId") int shelterId) {
+    @PostMapping("/employment-request")
+    public String submitEmploymentRequest(@RequestParam("shelterId") int shelterId) {
         Vet vet = (Vet) userService.getCurrentUser();
         Shelter shelter = shelterService.getShelterById(shelterId);
-        boolean exists = shelterRequestService.existsByVetAndShelter(vet, shelter);
-        if (exists) {
-            return "redirect:/vet/shelter-request";
-        }
-        ShelterRequest shelterRequest = new ShelterRequest(vet, shelter);
-        shelterRequestService.saveShelterRequest(shelterRequest);
-        return "redirect:/vet/shelter-request";
+
+        if (employmentRequestService.existsByVetAndShelter(vet, shelter))
+            return "redirect:/vet/employment-request?error=requestExists";
+
+        EmploymentRequest employmentRequest = new EmploymentRequest(vet, shelter);
+        employmentRequestService.saveEmploymentRequest(employmentRequest);
+        return "redirect:/vet/employment-request";
     }
 
     @GetMapping("/shelters")
